--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      height: 100%;
+      height: 100vh;
     }
     .sidebar input {
       font-size: 20px;
@@ -81,24 +81,32 @@
     function abrirUnicaVentana(nombre, url) {
       window.open(url, nombre, 'width=1000,height=700,resizable=yes,scrollbars=yes');
     }
+
     function mostrarTicket() {
       let monto = document.getElementById("precio").value;
       if (monto) {
-        let nuevaVentana = window.open('', '_blank');
-        nuevaVentana.document.write(`
-          <html><head><title>Ticket</title></head><body>
-          <div style="text-align: center; font-family: Arial, sans-serif;">
-            <h2>FARMACIA PINTAR</h2>
-            <p>San Miguel - AV REMIGIO LOPEZ 2393</p>
-            <p>Tel: 44555502 - WhatsApp: 1153183466</p>
-            <p><strong>Comprobante No Fiscal</strong></p>
-            <p><strong>Monto: $${monto}</strong></p>
-            <p>¡Gracias por su compra!</p>
-          </div>
-          <script>window.print();</script>
-          </body></html>
-        `);
+        let contenidoTicket = `
+          <html>
+          <head><title>Ticket</title></head>
+          <body onload="window.print(); setTimeout(() => window.close(), 1000);">
+            <div style="text-align: center; font-family: Arial, sans-serif;">
+              <h2>FARMACIA PINTAR</h2>
+              <p>San Miguel - AV REMIGIO LOPEZ 2393</p>
+              <p>Tel: 44555502 - WhatsApp: 1153183466</p>
+              <p><strong>Comprobante No Fiscal</strong></p>
+              <p><strong>Monto: $${monto}</strong></p>
+              <p>¡Gracias por su compra!</p>
+            </div>
+          </body>
+          </html>
+        `;
+
+        let nuevaVentana = window.open('', '_blank', 'width=400,height=600');
+        nuevaVentana.document.open();
+        nuevaVentana.document.write(contenidoTicket);
         nuevaVentana.document.close();
+      } else {
+        alert("Por favor, ingrese un monto antes de imprimir.");
       }
     }
   </script>
@@ -112,7 +120,13 @@
       <button class="btn azul" onclick="abrirUnicaVentana('panales', 'https://panales.turnosdefarmacias.info/')">PAÑALERA</button>
       <button class="btn verde" onclick="abrirUnicaVentana('colegio', 'https://www.colfarmaonline.org.ar')">COLEGIO</button>
       <button class="btn rojo" onclick="abrirUnicaVentana('plataforma', 'http://ctacte.cofasa.com.ar')">PLATAFORMA</button>
-      <button class="btn verdeagua" onclick="abrirUnicaVentana('turnos', 'https://www.turnosdefarmacias.info/')">TURNOS</button>
+      <button class="btn verdeagua" onclick="abrirUnicaVentana('iosfa_recetas', 'https://www.misvalidaciones.com.ar/')">IOSFA RECETAS</button>
+      <button class="btn verdeagua" onclick="abrirUnicaVentana('iosfa_afiliado', 'https://validador.iosfa.gob.ar/ValidadorSUA1')">IOSFA CONSULTA DE AFILIADO</button>
+      <button class="btn rosado" onclick="abrirUnicaVentana('meppes', 'http://sistemasl.ioma.gba.gov.ar/sistemas/meppes_farmacias/index.php')">MEPPES</button>
+      <button class="btn azul" onclick="abrirUnicaVentana('turnos', 'https://www.turnosdefarmacias.info/')">TURNOS</button>
+      <button class="btn azuloscuro" onclick="abrirUnicaVentana('farmasun', 'https://app.drogueriafarmasun.com.ar/login')">FARMASUN</button>
+      <button class="btn chrome" onclick="abrirUnicaVentana('gmail', 'https://mail.google.com/mail/u/1/')">LEKARNA MAIL</button>
+      <button class="btn pride" onclick="abrirUnicaVentana('osde', 'https://extranet.osde.com.ar/OSDEExtranet/jsp/multiempresas/osde/HomePublicaJuridicaV2.jsp')">OSDE VICENTE</button>
     </div>
   </div>
   <div class="sidebar">
