--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     body {
       margin: 0;
       padding: 20px;
-      background-color: #007BFF;
+      background-color: black;
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: row;
+     align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
     .content {
       flex-grow: 1;
